--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "axios": "^0.19.2",
     "cors": "^2.8.5",
+    "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
+    "log4js": "^6.2.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.3"
   }
