--- a/package.json
+++ b/package.json
@@ -5,18 +5,24 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
     "cors": "^2.8.5",
+    "detect-port": "^1.3.0",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
     "log4js": "^6.2.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.3"
+  },
+  "devDependencies": {
+    "jest": "^25.4.0",
+    "supertest": "^4.0.2"
   }
 }
